--- a/assets/style.css
+++ b/assets/style.css
@@ -40,17 +40,19 @@
   }
   
   h2 {
-    font-size: 5.5rem;
+    font-size: 3.75rem;
     margin-bottom: 4rem;
-    font-weight: 700;
+    font-weight: 150;
   }
   
   h3 {
-    font-size: 3.5rem;
+    font-size: 1.75rem;
     font-weight: 500;
   }
 
-  p {
+/* utility classes */
+
+  .intro {
     background-color: #770c65;
     color:#ebe5e8;
     font-size: 2.5rem;
@@ -62,13 +64,12 @@
     padding: 4rem;
     margin-bottom: 4.5rem;
   }
-
-  /* utility classes */
-
+  
   .main {
     width: 100vw;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     max-width: 65rem;
@@ -76,9 +77,9 @@
     padding: 2rem;
   }
 
-  .container > * {
+  /* .main > * {
     width: 100%;
-  }
+  } */
   
   .flex-column {
     display: flex;
@@ -101,15 +102,14 @@
   padding: 1rem 0;
   width: 20rem;
   text-align: center;
-  border: 0.3rem solid #770c65;
+  border: 0.3rem solid rgba(170, 50, 220, .8);
   border-radius: 3.75rem;
   margin-bottom: 2rem;
   text-decoration: none;
  }
 
  .btn:hover {
-  filter:brightness(104%);
-  /* color:#b15da3; */
+  filter:brightness(105%);
   box-shadow: -0.2rem 0.225rem 0.7rem 0 #b15da3;
   transform: translateY(-0.2rem);
   transition: transform 150ms;
