--- a/assets/quiz.css
+++ b/assets/quiz.css
@@ -1,4 +1,7 @@
 
+body {
+    background-color: var(--darkbg);
+}
 
 section {
     max-width: 55rem;
@@ -9,8 +12,9 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    outline: 0.3rem solid rgba(129, 30, 172, 0.8);
-    outline-offset: -1rem;
+    background-color: var(--lightbg);
+    outline: 0.4rem solid var(--darkborder);
+    outline-offset: -1.5rem;
     padding: 4.75rem 5.25rem;
 }
 
@@ -20,9 +24,9 @@ section {
     width: 100%;
     font-size: 2.85rem;
     overflow:hidden;
-    border: 0.3rem solid rgba(129, 30, 172, 0.8);
+    border: 0.3rem solid rgb(126, 33, 110);
     border-radius: 3rem;
-    background-color: #f8d4e7;
+    background-color: #fae2ef;
 }
 
 .quest-choices:hover {
@@ -35,7 +39,7 @@ section {
 
 .choice-letter {
     padding: 1rem 1.8rem;
-    background-color:rgba(129, 30, 172, 0.8);
+    background-color: rgb(126, 33, 110);
     font-size: 3rem;
     color:#ebe5e8;
     display: flex;
@@ -66,11 +70,11 @@ header {
 }
 
 .header-item {
-    /* background-color: #ebe5e8; */
+    background-color: #ffecf6;
     padding: 2.5rem 1.8rem;
     width:148px;
     text-align: center;
-    border: 0.3rem solid rgba(129, 30, 172, 0.8);;
+    border:0.1rem solid rgba(170, 50, 220, .8);
     border-radius: 7.5rem;
     margin-bottom: 10rem;
     text-decoration: none;
